# DiligentEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  check-git-status.bat  rebuild-all.bat  setup-submodules.bat
EarthworksEditor/: CMakeLists.txt
EarthworksEditor/src/: EarthworksEditor.cpp  EarthworksEditor.hpp
EarthworksFX/: CMakeLists.txt  MIGRATION.md
EarthworksFX/cmake/: DeployHLSL.cmake
EarthworksFX/hlsl/: PBR.hlsli  compute_tonemapper.hlsl  debugGrid.hlsl  material.hlsli  render_Common.hlsli  render_sprite.hlsl  sprite.hlsl
EarthworksFX/hlsl/atmosphere/: CSVolumeFogCommon.hlsli  compute_fogCloudAtmosphereCommon.hlsli  compute_sunlightInAtmosphere.hlsl  compute_volumeFog.hlsli  compute_volumeFogAtmosphericScatter.hlsl  compute_volumeFogLights.hlsl  compute_volumeFogSmokeAndDust.hlsl  noise.inc
EarthworksFX/hlsl/terrain/: compute_bakeFloodfill.hlsl  compute_bc6h.hlsl  compute_bc6h_functions.hlsli  compute_clipLodAnimatePlants.hlsl  compute_sampleRGBtoPixel.hlsl  compute_terrain_under_mouse.hlsl  compute_tileBicubic.hlsl  compute_tileBuildLookup.hlsl  compute_tileClear.hlsl  compute_tileDelaunay.hlsl  compute_tileEcotopes.hlsl  compute_tileGenerate.hlsl  compute_tileJumpFlood.hlsl  compute_tileNormals.hlsl  compute_tilePassthrough.hlsl  compute_tileSplitMerge.hlsl  compute_tileVertices.hlsl  compute_vegetation_clear.hlsl  compute_vegetation_lod.hlsl  compute_vegetation_sortCombine.hlsl  extractTextures.hlsl  gpuLights_defines.hlsli  gpuLights_functions.hlsli  groundcover_defines.hlsli  groundcover_functions.hlsli  materials.hlsli  render_Buildings_Far.hlsl  render_GliderWing.hlsl  render_Tiles.hlsl  render_cfdSlice.hlsl  render_meshTerrafector.hlsl  render_ribbons.hlsl  render_spline.hlsl  render_splineTerrafector.hlsl  render_thermalRibbons.hlsl  render_tile_sprite.hlsl  render_triangles.hlsl  render_vegetation_ribbons - Backup after new animations.hlsl  render_vegetation_ribbons - Copy.hlsl  render_vegetation_ribbons.hlsl  (+4 more)
EarthworksFX/interface/: EarthworksFXApplicationBase.hpp  EarthworksFXWindowBase.hpp  Falcor.h  FalcorCompat.hpp  FirstPersonCamera.hpp  GlmBasicMath.h  InputController.hpp  MathBridge.hpp  TerrainSystem.hpp
EarthworksFX/interface/Linux/: InputControllerLinux.hpp
EarthworksFX/sample/: CMakeLists.txt  readme.md
EarthworksFX/sample/assets/: .keep
EarthworksFX/sample/src/: EarthworksSample.cpp  EarthworksSample.hpp
EarthworksFX/scripts/: convert_fprintf_to_spdlog.py
EarthworksFX/shaders/: compute_tileBicubic.hlsl  compute_tileBuildLookup.hlsl  compute_tileClear.hlsl  compute_tileDelaunay.hlsl  compute_tileJumpFlood.hlsl  compute_tileNormals.hlsl  compute_tileSplitMerge.hlsl  compute_tileVertices.hlsl  render_Tiles.hlsl  terrainDefines.hlsli  terrainFunctions.hlsli  terrain_structs.hlsli
EarthworksFX/src/: GpuSinksImpl.cpp  TerrainDrawPass.cpp  TerrainElevationCache.cpp  TerrainInit.cpp  TerrainSystem.cpp  TerrainSystemImpl.hpp  TileBakePipeline.cpp
EarthworksFX/src/app/: EarthworksFXApplicationBase.cpp  EarthworksFXWindowBase.cpp  FirstPersonCamera.cpp
EarthworksFX/src/compat/: Falcor.cpp  FalcorCompat.cpp  FalcorGpu.cpp  FalcorGpuInternal.hpp  GlmBasicMath.cpp
EarthworksFX/src/core/: EarthworksDebug.h  Earthworks_4.cpp  Earthworks_4.h  Sprite_defines.h  Sprites.cpp  Sprites.h  atmosphere.cpp  atmosphere.h  barrier.hpp  cascadeShadowMaps.cpp  cascadeShadowMaps.h  computeShader.cpp  computeShader.h  earthworksScene.cpp  earthworksScene.h  ecotope.cpp  ecotope.h  lru_cache.h  pixelShader.cpp  pixelShader.h  ribbonBuilder.cpp  ribbonBuilder.h  roadNetwork.cpp  roadNetwork.h  roads_AI.cpp  roads_AI.h  roads_Intersection.cpp  roads_Intersection.h  roads_bezier.cpp  roads_bezier.h  roads_cubicDouble.cpp  roads_cubicDouble.h  roads_materials.cpp  roads_materials.h  roads_physics.cpp  roads_physics.h  roads_road.cpp  roads_road.h  terrafector.cpp  terrafector.h  (+8 more)
EarthworksFX/src/input/Linux/: InputControllerLinux.cpp
EarthworksFX/src/input/Win32/: InputControllerWin32.cpp
EarthworksFXSample/: CMakeLists.txt  readme.md
EarthworksFXSample/src/: EarthworksFXSample.cpp  EarthworksFXSample.hpp  ShaderGridRenderer.cpp  ShaderGridRenderer.hpp
TerrainGenerator/: CMakeLists.txt
TerrainGenerator/src/: TerrainGenerator.cpp  TerrainGenerator.hpp
TextureSplitTool/: CMakeLists.txt
TextureSplitTool/src/: TextureSplitTool.cpp  TextureSplitTool.hpp
